Fix the (possibly ugly) gap above footer.
If body background differs from wrapper background
it bleeds between main content and footer.

--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,6 +1,5 @@
 footer {
     color: $color-light;
-    padding-top:$baseline;
     padding-bottom:$baseline;
     text-align:center;
 
